# CMakeTutorial_shou

./: README.md
1_HajimariHajimari/: CMakeLists.txt  main.cpp
HajimariHajimari/: TutorialConfig.h.in
